--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,10 +1,11 @@
 <ion-header>
   <ion-toolbar color="dark">
     <ion-buttons slot="primary">
-      <ion-button>
+      <ion-button (click)="this.setFilter('8-bit')">
         <ion-icon slot="icon-only" name="search"></ion-icon>
       </ion-button>
     </ion-buttons>
+    <ion-searchbar animated></ion-searchbar>
     <ion-title>
       Peterest
     </ion-title>
@@ -12,7 +13,8 @@
 </ion-header>
 
 <ion-content>
-  <ion-list *ngFor="let img of images">
+  <!--*ngIf="filter==='' || filter===img.type || filter===img.name"-->
+  <ion-list *ngFor="let img of getResults()">
     <ion-card>
       <ion-card-header>
         <ion-title>{{img.type}}</ion-title>
