--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,8 +1,13 @@
 <ion-header *ngIf="!this.x">
     <ion-toolbar color="dark">
-        <ion-buttons slot="primary">
+        <ion-buttons slot="end">
             <ion-button (click)="this.toggleSearch()">
                 <ion-icon slot="icon-only" name="search"></ion-icon>
+            </ion-button>
+        </ion-buttons>
+        <ion-buttons slot="start">
+            <ion-button (click)="navigate('profile')">
+                <ion-icon slot="icon-only" name="contact"></ion-icon>
             </ion-button>
         </ion-buttons>
         <ion-title *ngIf="!this.x">
@@ -12,22 +17,22 @@
 </ion-header>
 
 <ion-header *ngIf="this.x">
-    <ion-searchbar animated [(ngModel)]="filter" showCancelButton></ion-searchbar>
+    <ion-searchbar animated [(ngModel)]="filter" showCancelButton (ionCancel)="toggleSearch()"></ion-searchbar>
 </ion-header>
 
+
 <ion-content>
-    <ion-button (click)="navigate('profile')">Go to profile</ion-button>
-    <!--<ion-list *ngFor="let img of getResults()">-->
-        <!--<ion-card color="dark" button (click)="setFilter('chibi')">-->
-            <!--<ion-card-header>-->
-                <!--<ion-title>{{img.type}}</ion-title>-->
-            <!--</ion-card-header>-->
-            <!--<ion-img src={{img.src}}></ion-img>-->
-            <!--<ion-card-header>-->
-                <!--<ion-card-subtitle>Name: {{img.name}}</ion-card-subtitle>-->
-            <!--</ion-card-header>-->
-        <!--</ion-card>-->
-    <!--</ion-list>-->
+    <ion-list *ngFor="let img of results">
+        <ion-card color="dark">
+            <ion-card-header>
+                <ion-title>{{img.type}}</ion-title>
+            </ion-card-header>
+            <ion-img src={{img.src}}></ion-img>
+            <ion-card-header>
+                <ion-card-subtitle>Name: {{img.name}}</ion-card-subtitle>
+            </ion-card-header>
+        </ion-card>
+    </ion-list>
     <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
         <ion-infinite-scroll-content
                 loadingSpinner="bubbles"
