--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="dark">
+  <ion-toolbar color="light">
     <ion-buttons slot="start">
       <ion-button (click)="navigate('home')">
         <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
@@ -10,7 +10,61 @@
 </ion-header>
 
 <ion-content>
-  <ion-item class="img">
-    <ion-img src="assets/8-bit/1.png"></ion-img>
-  </ion-item>
+    <ion-card>
+      <p class="title">@Ptthappy</p>
+      <ion-card-content>
+        <img src="assets/chibi/5.jpg" class="img">
+        <p class="sub">Luis Petrella</p>
+      </ion-card-content>
+    </ion-card>
+
+  <ion-card>
+    <p class="title">Gallery</p>
+    <ion-grid>
+      <ion-row>
+        <ion-col style="padding: 2px">
+          <img src="assets/eSports/1.jpg" alt="">
+        </ion-col>
+        <ion-col style="padding: 2px">
+          <img src="assets/eSports/2.jpg" alt="">
+        </ion-col>
+        <ion-col style="padding: 2px">
+          <img src="assets/eSports/7.jpg" alt="">
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col style="padding: 2px">
+          <img src="assets/eSports/4.jpg" alt="">
+        </ion-col>
+        <ion-col style="padding: 2px">
+          <img src="assets/eSports/5.jpg" alt="">
+        </ion-col>
+        <ion-col style="padding: 2px">
+          <img src="assets/eSports/6.jpg" alt="">
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col style="padding: 2px">
+          <img src="assets/eSports/3.jpg" alt="">
+        </ion-col>
+        <ion-col style="padding: 2px">
+          <img src="assets/eSports/8.jpg" alt="">
+        </ion-col>
+        <ion-col style="padding: 2px">
+          <img src="assets/eSports/10.jpg" alt="">
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col style="padding: 2px">
+          <img src="assets/eSports/10.jpg" alt="">
+        </ion-col>
+        <ion-col style="padding: 2px">
+          <img src="assets/eSports/11.jpg" alt="">
+        </ion-col>
+        <ion-col style="padding: 2px">
+          <img src="assets/eSports/12.jpg" alt="">
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-card>
 </ion-content>
