--- a/src/app/profile/profile.page.scss
+++ b/src/app/profile/profile.page.scss
@@ -1,4 +1,20 @@
 .img {
-  margin-top: 5vh;
-  padding-bottom: 10px;
+  margin: 0;
+  border-radius: 1.4vw;
+}
+
+.title {
+  font-size: 1.5em;
+  text-align: center;
+  font-weight: bolder;
+  margin: 2vw;
+  color: rgb(15, 15, 15);
+}
+
+.sub {
+  font-size: 1.2em;
+  text-align: center;
+  font-weight: bold;
+  margin: 2vw;
+  color: rgb(40, 40, 40);
 }
